syntax="proto3";

// Interface exported by the worker
service WorkerService {
    rpc ReceiveGraphDefinition(GraphDefinition) returns (GraphDefinitionConfirmed);
    rpc ReceiveGraphPieces(stream GraphPiece) returns (GraphConfirmed);
}

message GraphDefinition {
    uint64 graph_id = 1;
}

message GraphDefinitionConfirmed {
    uint64 graph_id = 1;
}

// Protocol Buffers are not designed to handle large messages. 
// Send the graph in pieces. Keep each piece under 1Mb
message GraphPiece {
    repeated Node nodes = 1;
    repeated Edge edges = 2;
}

message GraphConfirmed {
    uint64 graph_id = 1;
}

message Node {
    uint64 node_id = 1;
}

message Edge {
    uint64 node_from_id = 2;
    uint64 node_to_id = 3;
    uint64 weight = 4;
    bool is_boundary_edge = 5;
}


